2011-06-23  Ken Brown  <kbrown@cornell.edu>

	* Makefile.cygwin: Accommodate removal of coset.h and coset.cc.
	* Makefile.cygwin-mingw: Ditto.
	* Makefile.linux: Ditto.

2011-06-23  Ken Brown  <kbrown@cornell.edu>

	* coset.cc: Delete file.
	* coset.h: Ditto.
	* cosettable.h: Accommodate removal of class Coset.  Make new
	typedefs row, coset, gen.
	(CosetTable::undefine): New member function.
	* cosettable.cc: Accommodate removal of class Coset.  Use new
	typedefs for clarity.  Introduce const qualifiers where
	appropriate.
	(operator<<): New nonmember function to print row.
	* gens_and_words.h: Rename gen[] to gens[].
	* gens_and_words.cc: Accommodate.
	* stack.h: Rename members of struct deduction.

2011-06-23  Ken Brown  <kbrown@cornell.edu>

	* equivreln.h: New file.  Declare class EquivReln.
	* equivreln.cc: New file.  Implement class EquivReln.
	* cosettable.h (CosetTable): Use new class EquivReln; delete rep,
	change merge to call EquivReln::merge.
	* cosettable.cc: Use new class EquivReln; accommodate throughout.
	Delete rep, call EquivReln::rep instead.
	* Makefile.cygwin: Accommodate new files equivreln.{cc,h} and
	tc.{cc,h}.
	* Makefile.linux: Ditto.
	* Makefile.cygwin-mingw: Ditto.

2011-06-15  Ken Brown  <kbrown@cornell.edu>

	* cosettable.cc (CosetTable::define): Change return type to void.
	Exit instead of returning false if can't allocate memory.
	(CosetTable::scan_and_fill): Change return type to void.
	Accomodate change to return type of define.
	(CosetTable::enumerate): Change return type to void.  Exit if
	threhsold is exceeded in hlt_plus.  Accomodate changes to return
	types of other functions.
	(CosetTable::hlt): Change return type to void.  Accomodate changes
	to return types of scan_and_fill and define.
	(CosetTable::hlt_plus): Change return type to void.  Be more
	specific in catching exceptions thrown by reserve().  Throw
	exception if threshold is too small.  Accomodate changes to return
	types of scan_and_fill and define.